unpackaged/main/default/objects/Account/fields/A_Long_Number__c.field-meta.xml
<CustomField>
	<fullName>A_Long_Number__c</fullName>
	<label>A Long Number</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>