unpackaged/main/default/objects/Account/fields/AA_Field__c.field-meta.xml
<CustomField>
	<fullName>AA_Field__c</fullName>
	<defaultValue>true</defaultValue>
	<label>AA_Field</label>
	<type>Checkbox</type>
</CustomField>