unpackaged/main/default/objects/Account/fields/Account_Depth__c.field-meta.xml
<CustomField>
	<fullName>Account_Depth__c</fullName>
	<label>Account Depth</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Deep</fullName>
			</value>
			<value>
				<fullName>Deeper</fullName>
			</value>
			<value>
				<fullName>Deepest</fullName>
			</value>
			<value>
				<fullName>Shallow</fullName>
			</value>
			<value>
				<fullName>Super Deep</fullName>
			</value>
			<value>
				<fullName>Demo Deep</fullName>
				<default>true</default>
				<label>Demo Deep</label>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>