unpackaged/main/default/objects/Account/fields/Account_Flag__c.field-meta.xml
<CustomField>
	<fullName>Account_Flag__c</fullName>
	<description>custom field description test</description>
	<inlineHelpText>custom field help text test</inlineHelpText>
	<label>Account Flag</label>
	<length>1</length>
	<type>Text</type>
</CustomField>