unpackaged/main/default/objects/Account/fields/Account_ID__c.field-meta.xml
<CustomField>
	<fullName>Account_ID__c</fullName>
	<label>Account ID</label>
	<length>40</length>
	<type>Text</type>
</CustomField>