unpackaged/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
	<fullName>Active__c</fullName>
	<label>Active</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>No</fullName>
			</value>
			<value>
				<fullName>Yes</fullName>
			</value>
			<value>
				<fullName>Maybe</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>