unpackaged/main/default/objects/Account/fields/AnnualITBudget__c.field-meta.xml
<CustomField>
	<fullName>AnnualITBudget__c</fullName>
	<label>Annual IT Budget</label>
	<precision>12</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>