unpackaged/main/default/objects/Account/fields/CorporateDesktopHWStandard__c.field-meta.xml
<CustomField>
	<fullName>CorporateDesktopHWStandard__c</fullName>
	<label>Corporate Desktop HW Standard</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>HP</fullName>
			</value>
			<value>
				<fullName>IBM</fullName>
			</value>
			<value>
				<fullName>Compaq</fullName>
			</value>
			<value>
				<fullName>Dell</fullName>
			</value>
			<value>
				<fullName>Other</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>