unpackaged/main/default/objects/Account/fields/CorporateDesktopOSStandard__c.field-meta.xml
<CustomField>
	<fullName>CorporateDesktopOSStandard__c</fullName>
	<label>Corporate Desktop OS Standard</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Windows 98</fullName>
			</value>
			<value>
				<fullName>Windows 2000</fullName>
			</value>
			<value>
				<fullName>Windows XP</fullName>
			</value>
			<value>
				<fullName>Mac OS</fullName>
			</value>
			<value>
				<fullName>Other</fullName>
			</value>
			<value>
				<fullName>Windows 95</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>