unpackaged/main/default/objects/Account/fields/ofsalesreps__c.field-meta.xml
<CustomField>
	<fullName>ofsalesreps__c</fullName>
	<label>Actual Reps</label>
	<precision>10</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>