unpackaged/main/default/objects/Account/fields/PrimaryDataCenterLocation__c.field-meta.xml
<CustomField>
	<fullName>PrimaryDataCenterLocation__c</fullName>
	<label>Primary Data Center Location</label>
	<length>100</length>
	<type>Text</type>
</CustomField>