unpackaged/main/default/objects/Account/fields/PrimaryERPSystem__c.field-meta.xml
<CustomField>
	<fullName>PrimaryERPSystem__c</fullName>
	<label>Primary ERP System</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Oracle</fullName>
			</value>
			<value>
				<fullName>Peoplesoft</fullName>
			</value>
			<value>
				<fullName>SAP</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>