unpackaged/main/default/objects/Account/fields/ReferenceProgramStatus__c.field-meta.xml
<CustomField>
	<fullName>ReferenceProgramStatus__c</fullName>
	<label>Reference Program Status</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Available</fullName>
			</value>
			<value>
				<fullName>Not Available</fullName>
			</value>
			<value>
				<fullName>Top Level</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>