unpackaged/main/default/objects/Account/fields/TotalPotentialLicenses__c.field-meta.xml
<CustomField>
	<fullName>TotalPotentialLicenses__c</fullName>
	<label>Total Potential Licenses</label>
	<precision>10</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>