unpackaged/main/default/objects/Account/recordTypes/Account_Rec_Type1.recordType-meta.xml
<RecordType>
	<fullName>Account_Rec_Type1</fullName>
	<active>true</active>
	<label>Account Rec Type1</label>
</RecordType>