unpackaged/main/default/objects/Account/recordTypes/Account_Rec_Type2.recordType-meta.xml
<RecordType>
	<fullName>Account_Rec_Type2</fullName>
	<active>true</active>
	<label>Account Rec Type2</label>
</RecordType>