unpackaged/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
	<fullName>MyAccounts</fullName>
	<columns>ACCOUNT.NAME</columns>
	<columns>ACCOUNT.SITE</columns>
	<columns>ACCOUNT.ADDRESS1_STATE</columns>
	<columns>ACCOUNT.PHONE1</columns>
	<columns>ACCOUNT.TYPE</columns>
	<columns>CORE.USERS.ALIAS</columns>
	<filterScope>Everything</filterScope>
	<label>My Accounts</label>
	<language>en_US</language>
</ListView>